--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "backend/server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "backend/server.js" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "backend/server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "backend/server.js" },
+    { "src": "/(.*)", "dest": "backend/server.js" }
+  ]
+}
