--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "compromise": "^14.14.4",
