--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "compromise": "^14.14.4",
@@ -33,7 +34,8 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "openai": "^5.5.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
